--- a/page.html
+++ b/page.html
@@ -11,6 +11,18 @@
 	<link rel="stylesheet" href="res/style.css">
 	<link href="https://cdn-img.9118bao.com/templates/frontend/dark-corai/css/font-awesome.min.css" rel="stylesheet">
 	<link href="https://cdn-img.9118bao.com/templates/frontend/dark-corai/css/colors.css" rel="stylesheet">
+	<style>
+		/* fade image in after load */
+.lazyload,
+.lazyloading {
+	opacity: 0;
+}
+.lazyloaded {
+	opacity: 1;
+	transition: opacity 2000ms;
+}
+
+	</style>
 </head>
 
 <body>
@@ -19,7 +31,8 @@
 			<div class="navbar-header"> <button type="button" class="navbar-toggle" data-toggle="collapse"
 					data-target=".navbar-inverse-collapse"> <span class="sr-only">Toggle navigation</span> <span
 						class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="/"><img src="/images/logo/logo.png"></a> </div>
+				<a class="navbar-brand" href="/"><img src="/images/logo/logo.png"></a>
+			</div>
 			<div class="navbar-collapse collapse navbar-inverse-collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/videos">课程</a></li>
@@ -39,8 +52,9 @@
 								action="/search/videos">
 								<div class="input-group"> <input type="text" class="form-control" placeholder="搜索"
 										name="search_query" id="search_query" value="">
-										<span class="input-group-btn"> <button type="submit"
-											class="btn btn-primary"><i class="fa fa-search"></i></button> </span> </div>
+									<span class="input-group-btn"> <button type="submit" class="btn btn-primary"><i
+												class="fa fa-search"></i></button> </span>
+								</div>
 							</form>
 						</ul>
 					</li>
@@ -67,7 +81,7 @@
 									<div class="thumb-overlay"> <img
 											data-src="https://img.cache010.com/media/videos/tmb/4884/1.jpg"
 											title="即ハメできちゃうオレ専用メイド - 藤沢えみり 1936" alt="即ハメできちゃうオレ専用メイド - 藤沢えみり 1936"
-											id="rotate_4884_20_1_recent" class="lazy lazyload img-responsive "
+											id="rotate_4884_20_1_recent" class="lazyload img-responsive "
 											src="res/loading...png" />
 										<div class="hd-text-icon">HD</div>
 										<div class="duration">
@@ -82,7 +96,8 @@
 								<div class="video-views pull-left">
 									2920598 人观看 </div>
 								<div class="video-rating pull-right "> <i class="fa fa-heart video-rating-heart "></i>
-									<b>58%</b> </div>
+									<b>58%</b>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -92,8 +107,7 @@
 											data-src="https://img.cache010.com/media/videos/tmb/4883/1.jpg"
 											title="性感マッサージで快感！～羽奈美すずの場合～ - 羽奈美すず 1938"
 											alt="性感マッサージで快感！～羽奈美すずの場合～ - 羽奈美すず 1938" id="rotate_4883_20_1_recent"
-											class="lazy lazyload img-responsive "
-											src="res/loading...png" />
+											class="lazyload img-responsive " src="res/loading...png" />
 										<div class="hd-text-icon">HD</div>
 										<div class="duration">
 											24:21
@@ -107,7 +121,8 @@
 								<div class="video-views pull-left">
 									4757303 人观看 </div>
 								<div class="video-rating pull-right "> <i class="fa fa-heart video-rating-heart "></i>
-									<b>59%</b> </div>
+									<b>59%</b>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -117,8 +132,7 @@
 											data-src="https://img.cache010.com/media/videos/tmb/4882/1.jpg"
 											title="ラテンハーフを飼育中！～アナルも開発中です！！～ - 亜美 2039"
 											alt="ラテンハーフを飼育中！～アナルも開発中です！！～ - 亜美 2039" id="rotate_4882_20_1_recent"
-											class="lazy lazyload img-responsive "
-											src="res/loading...png" />
+											class="lazyload img-responsive " src="res/loading...png" />
 										<div class="hd-text-icon">HD</div>
 										<div class="duration">
 											01:01:27
@@ -132,7 +146,8 @@
 								<div class="video-views pull-left">
 									2839774 人观看 </div>
 								<div class="video-rating pull-right "> <i class="fa fa-heart video-rating-heart "></i>
-									<b>69%</b> </div>
+									<b>69%</b>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -142,8 +157,7 @@
 											data-src="https://img.cache010.com/media/videos/tmb/4881/1.jpg"
 											title="高級ソープで 癒し系美熟女とネットリ肉体交渉 - 彩月あかり 2009"
 											alt="高級ソープで 癒し系美熟女とネットリ肉体交渉 - 彩月あかり 2009" id="rotate_4881_20_1_recent"
-											class="lazy lazyload img-responsive "
-											src="res/loading...png" />
+											class="lazyload img-responsive " src="res/loading...png" />
 										<div class="hd-text-icon">HD</div>
 										<div class="duration">
 											01:04:32
@@ -157,7 +171,8 @@
 								<div class="video-views pull-left">
 									5132902 人观看 </div>
 								<div class="video-rating pull-right "> <i class="fa fa-heart video-rating-heart "></i>
-									<b>68%</b> </div>
+									<b>68%</b>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -167,8 +182,7 @@
 											data-src="https://img.cache010.com/media/videos/tmb/4880/1.jpg"
 											title="やっぱり爆乳が好き！～Hカップを揉みながらイキたい！！～ - 笹宮えれな 1914"
 											alt="やっぱり爆乳が好き！～Hカップを揉みながらイキたい！！～ - 笹宮えれな 1914" id="rotate_4880_20_1_recent"
-											class="lazy lazyload img-responsive "
-											src="res/loading...png" />
+											class="lazyload img-responsive " src="res/loading...png" />
 										<div class="hd-text-icon">HD</div>
 										<div class="duration">
 											59:35
@@ -182,7 +196,8 @@
 								<div class="video-views pull-left">
 									1884073 人观看 </div>
 								<div class="video-rating pull-right "> <i class="fa fa-heart video-rating-heart "></i>
-									<b>64%</b> </div>
+									<b>64%</b>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -192,7 +207,7 @@
 											data-src="https://img.cache010.com/media/videos/tmb/4879/1.jpg"
 											title="おっぱいをいっぱい責めながら濃密性交～乳首を抓みながらハメハメ～ - 上原茉咲 2120"
 											alt="おっぱいをいっぱい責めながら濃密性交～乳首を抓みながらハメハメ～ - 上原茉咲 2120"
-											id="rotate_4879_20_1_recent" class="lazy lazyload img-responsive "
+											id="rotate_4879_20_1_recent" class="lazyload img-responsive "
 											src="res/loading...png" />
 										<div class="hd-text-icon">HD</div>
 										<div class="duration">
@@ -208,7 +223,8 @@
 								<div class="video-views pull-left">
 									1333441 人观看 </div>
 								<div class="video-rating pull-right "> <i class="fa fa-heart video-rating-heart "></i>
-									<b>60%</b> </div>
+									<b>60%</b>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -217,7 +233,7 @@
 									<div class="thumb-overlay"> <img
 											data-src="https://img.cache010.com/media/videos/tmb/4878/1.jpg"
 											title="突然、AVデビュー！？ - 美星るか 1999" alt="突然、AVデビュー！？ - 美星るか 1999"
-											id="rotate_4878_20_1_recent" class="lazy lazyload img-responsive "
+											id="rotate_4878_20_1_recent" class="lazyload img-responsive "
 											src="res/loading...png" />
 										<div class="hd-text-icon">HD</div>
 										<div class="duration">
@@ -231,7 +247,8 @@
 								<div class="video-views pull-left">
 									2316651 人观看 </div>
 								<div class="video-rating pull-right "> <i class="fa fa-heart video-rating-heart "></i>
-									<b>67%</b> </div>
+									<b>67%</b>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -240,7 +257,7 @@
 									<div class="thumb-overlay"> <img
 											data-src="https://img.cache010.com/media/videos/tmb/4877/1.jpg"
 											title="元ヤン美女の追憶ファック！ - 高木きょうこ 2065" alt="元ヤン美女の追憶ファック！ - 高木きょうこ 2065"
-											id="rotate_4877_20_1_recent" class="lazy lazyload img-responsive "
+											id="rotate_4877_20_1_recent" class="lazyload img-responsive "
 											src="res/loading...png" />
 										<div class="hd-text-icon">HD</div>
 										<div class="duration">
@@ -255,7 +272,8 @@
 								<div class="video-views pull-left">
 									1279691 人观看 </div>
 								<div class="video-rating pull-right "> <i class="fa fa-heart video-rating-heart "></i>
-									<b>67%</b> </div>
+									<b>67%</b>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -264,7 +282,7 @@
 									<div class="thumb-overlay"> <img
 											data-src="https://img.cache010.com/media/videos/tmb/4876/1.jpg"
 											title="郡司結子の足コキでイケ！ - 郡司結子 1913" alt="郡司結子の足コキでイケ！ - 郡司結子 1913"
-											id="rotate_4876_20_1_recent" class="lazy lazyload img-responsive "
+											id="rotate_4876_20_1_recent" class="lazyload img-responsive "
 											src="res/loading...png" />
 										<div class="hd-text-icon">HD</div>
 										<div class="duration">
@@ -279,7 +297,8 @@
 								<div class="video-views pull-left">
 									2851699 人观看 </div>
 								<div class="video-rating pull-right "> <i class="fa fa-heart video-rating-heart "></i>
-									<b>62%</b> </div>
+									<b>62%</b>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -288,7 +307,7 @@
 									<div class="thumb-overlay"> <img
 											data-src="https://img.cache010.com/media/videos/tmb/4875/1.jpg"
 											title="千佳のエッチな姿、たくさん見て下さい - 杉山千佳 2088" alt="千佳のエッチな姿、たくさん見て下さい - 杉山千佳 2088"
-											id="rotate_4875_20_1_recent" class="lazy lazyload img-responsive "
+											id="rotate_4875_20_1_recent" class="lazyload img-responsive "
 											src="res/loading...png" />
 										<div class="hd-text-icon">HD</div>
 										<div class="duration">
@@ -303,7 +322,8 @@
 								<div class="video-views pull-left">
 									1675463 人观看 </div>
 								<div class="video-rating pull-right "> <i class="fa fa-heart video-rating-heart "></i>
-									<b>66%</b> </div>
+									<b>66%</b>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -313,8 +333,7 @@
 											data-src="https://img.cache010.com/media/videos/tmb/4874/1.jpg"
 											title="やっぱり爆乳が好き！～Iカップを揉みながらイキたい！！～ - 祈里きすみ 1956"
 											alt="やっぱり爆乳が好き！～Iカップを揉みながらイキたい！！～ - 祈里きすみ 1956" id="rotate_4874_20_1_recent"
-											class="lazy lazyload img-responsive "
-											src="res/loading...png" />
+											class="lazyload img-responsive " src="res/loading...png" />
 										<div class="hd-text-icon">HD</div>
 										<div class="duration">
 											01:03:20
@@ -328,7 +347,8 @@
 								<div class="video-views pull-left">
 									2540220 人观看 </div>
 								<div class="video-rating pull-right "> <i class="fa fa-heart video-rating-heart "></i>
-									<b>67%</b> </div>
+									<b>67%</b>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -362,7 +382,7 @@
 			idx = 1
 		}
 
-		$("body").on('mouseover', "img[id*='rotate_']", function (event) {
+		$('.lazyload').on('mouseover', function (event) {
 			if (timer) {
 				return
 			}
@@ -377,10 +397,10 @@
 				othis.src = `${path}/${idx}.jpg`
 				idx++
 			}, 500)
-		}).on('mouseout', "img[id*='rotate_']", function (event) {
+		}).on('mouseout', function (event) {
 			clearTimer()
 			this.src = this.dataset.src
-		});
+		})
 	</script>
 </body>
 
