--- a/page.html
+++ b/page.html
@@ -140,7 +140,7 @@
 				var tmp = `
 <div class="col-sm-4 col-md-3 col-lg-3">
 <div class="well well-sm">
-<a href="${item.url}">
+<a href="${item.url}" target="_blank">
 <div class="thumb-overlay">
 <img data-src="${item.img}" src="res/loading...png" title="${item.title}" alt="${item.title}" class="lazyload img-responsive" />
 <div class="hd-text-icon">${item.hd}</div>
